syntax = "proto3";

package proxy_checker_api;

option go_package = "proxy-checker-api.v1";

message ProxyRequest {
    repeated string value = 1;
}

enum ProxyType {
    PROXY_TYPE_HTTP = 0;
    PROXY_TYPE_HTTPS = 1;
    PROXY_TYPE_SOCK5 = 2;
}

message ProxyInfo {
    ProxyType type = 1;
    string externalIp = 2;
    string country = 3;
    string region = 4;
}

message ProxyCheckResult {
    string value = 1;
    bool active = 2;
    optional ProxyInfo info = 3;
}

message ProxyResponse {
    int64 total = 1;
    int64 active = 2;
    repeated ProxyCheckResult checkResult = 3;
}

service ProxyChecker {
    rpc check (ProxyRequest) returns (ProxyResponse);
    rpc checkStream (ProxyRequest) returns (stream ProxyCheckResult);
}